--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,8 +25,13 @@ jobs:
         python -m pip install -r requirements.txt
 
     - name: Make README
+      env:
+        TWITTER_API_KEY            : ${{ secrets.TWITTER_API_KEY }}
+        TWITTER_API_SECRET_KEY     : ${{ secrets.TWITTER_API_SECRET_KEY }}
+        TWITTER_ACCESS_TOKEN       : ${{ secrets.TWITTER_ACCESS_TOKEN }}
+        TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
       run: |-
-        python make_readme.py
+        python make_readme.py -y
 
     - name: Commit changes
       uses: stefanzweifel/git-auto-commit-action@v4
